<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Strings related to main activity -->

    <string name="app_name">Flight Recorder</string>
    <string name="notification_title">Recording</string>
    <string name="notification_message">Recording Video</string>
    <string name="video_thumbnail">Video Thumbnail</string>

    <!-- Strings related to the recording popup -->

    <string name="recording_popup_ellipsis">&#8230;</string>
    <string name="recording_popup_status">Recording</string>
    <string name="recording_popup_unoriented">Unoriented</string>
    <string name="recording_popup_orientation_locked">Orientation locked</string>
    <string name="recording_popup_tipover">Tipover</string>
    <string name="recording_popup_save">Save</string>
    <string name="recording_popup_discard">Discard</string>

    <string name="discard_confirm_title">Really discard?</string>
    <string name="discard_confirm_text">Are you sure you want to discard the current recording?</string>

    <!-- Strings related to the main menu -->

    <string name="menu_record_title">Start recording</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_about_title">About</string>

    <!-- Strings related to the action mode menu -->

    <string name="menu_delete">Delete</string>
    <string name="menu_store_externally">Save to external storage</string>
    <string name="delete_confirm_title">Really delete?</string>
    <string name="delete_confirm_text">Are you sure you want to permanently delete the selected files?</string>

    <!-- Strings related to settings -->

    <string name="pref_toolbar_title">Settings</string>

    <string name="pref_cat_recording">Recording</string>

    <string name="pref_duration_title">Record duration</string>
    <string-array name="pref_duration_entries">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
    </string-array>
    <string-array name="pref_duration_entry_values">
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_1080p">1080p</string>
    <string name="pref_video_quality_720p">720p</string>
    <string-array name="pref_video_quality_entries">
        <item>@string/pref_video_quality_1080p</item>
        <item>@string/pref_video_quality_720p</item>
    </string-array>
    <string name="pref_video_quality_default">@string/pref_video_quality_1080p</string>

    <string name="pref_camera_title">Camera</string>
    <string name="pref_camera_back">Back</string>
    <string name="pref_camera_front">Front</string>
    <string-array name="pref_camera_entries">
        <item>@string/pref_camera_back</item>
        <item>@string/pref_camera_front</item>
    </string-array>
    <string name="pref_camera_default">@string/pref_camera_back</string>

    <string name="pref_cat_saving">Saving</string>

    <string name="pref_save_on_tipover_title">Save recording on tipover</string>

    <string name="pref_tipover_threshold_title">Tipover threshold</string>
    <string name="pref_tipover_threshold_low">Low (45 &#x00B0;)</string>
    <string name="pref_tipover_threshold_medium">Medium (60 &#x00B0;)</string>
    <string name="pref_tipover_threshold_high">High (75 &#x00B0;)</string>
    <string-array name="pref_tipover_threshold_entries">
        <item>@string/pref_tipover_threshold_low</item>
        <item>@string/pref_tipover_threshold_medium</item>
        <item>@string/pref_tipover_threshold_high</item>
    </string-array>
    <string name="pref_tipover_threshold_default">@string/pref_tipover_threshold_medium</string>

    <string name="pref_tipover_timeout_title">Tipover timeout</string>
    <string-array name="pref_tipover_timeout_entries">
        <item>0 sec</item>
        <item>1 sec</item>
        <item>2 sec</item>
        <item>3 sec</item>
    </string-array>
    <string-array name="pref_tipover_timeout_entry_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_backup_title">Save videos to Google Drive</string>

    <string name="pref_location_title">Save location</string>

    <!-- Strings related to the about screen -->

    <string name="about_text">
        Copyright &#x00A9; 2018 by Mnemolyst under the Creative Commons Attribution-ShareAlike https://creativecommons.org/licenses/by-sa/4.0 license.\n\n<b>No warranty is given for this product.</b>\n\nThe author intends for this software to record video and audio potentially for hours in a way that uses relatively little storage. When it starts recording, it remembers which way is up, and if it detects that it has tipped over it saves the last few seconds, up to 1 minute, in a standard video file format (MP4), optionally backing it up to a linked Google Drive account.\n\nThere is no officially suggested nor supported use. The author affixes it to his bicycle and uses it as a kind of dashcam with automatic data backup.\n\nTested solely on a Nexus 5X. Your results may vary.\n\nThe current privacy policy can be found at http://www.mnemolyst.com/flight-recorder/privacy-policy.html
    </string>

    <string name="privacy_policy">
        Flight Recorder (the app) records video and audio from your device\'s camera and microphone. This data is handled entirely within the app until it is either discarded or saved to a file (video file) on your device\'s internal storage. If the setting "Save location" is enabled, the current location of your device is embedded in the video file. If the setting "Save videos to Google Drive" is enabled and the app has been authorized to manage files on a connected Google Drive account (Google Drive), the app will attempt to upload a copy of the video file to Google Drive. No data is saved on any server belonging to mnemolyst.com or shared with any other 3rd party.
    </string>

    <!-- Snackbar strings -->

    <string name="camera_permission_note">Camera permission is required for operation.</string>
    <string name="storage_permission_note">External Storage permission is required for this action.</string>
    <string name="error_deleting">There was an error deleting a selected file.</string>
    <string name="no_external_storage">External storage unavailable.</string>

</resources>
