<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_cat_recording"
        android:key="pref_cat_recording">
        <ListPreference
            android:defaultValue="10"
            android:entries="@array/pref_duration_entries"
            android:entryValues="@array/pref_duration_entry_values"
            android:key="pref_duration"
            android:title="@string/pref_duration_title" />
        <ListPreference
            android:defaultValue="@string/pref_video_quality_default"
            android:entries="@array/pref_video_quality_entries"
            android:entryValues="@array/pref_video_quality_entries"
            android:key="pref_video_quality"
            android:title="@string/pref_video_quality_title" />
        <ListPreference
            android:defaultValue="@string/pref_camera_default"
            android:entries="@array/pref_camera_entries"
            android:entryValues="@array/pref_camera_entries"
            android:key="pref_camera"
            android:title="@string/pref_camera_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_saving"
        android:key="pref_cat_saving">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_tipover"
            android:title="@string/pref_save_on_tipover_title" />
        <ListPreference
            android:defaultValue="@string/pref_tipover_threshold_default"
            android:dependency="pref_tipover"
            android:entries="@array/pref_tipover_threshold_entries"
            android:entryValues="@array/pref_tipover_threshold_entries"
            android:key="pref_tipover_threshold"
            android:title="@string/pref_tipover_threshold_title" />
        <ListPreference
            android:defaultValue="1"
            android:dependency="pref_tipover"
            android:entries="@array/pref_tipover_timeout_entries"
            android:entryValues="@array/pref_tipover_timeout_entry_values"
            android:key="pref_tipover_timeout"
            android:title="@string/pref_tipover_timeout_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_location"
            android:title="@string/pref_location_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_backup"
            android:title="@string/pref_backup_title" />
    </PreferenceCategory>
</PreferenceScreen>