<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/savedVideoList"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/dimOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dimOverlay"
        android:elevation="20dp"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/recordFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="6dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/recording_notification_icon"
        android:onClick="fabClick" />

    <android.support.v7.widget.CardView
        android:id="@+id/recordCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorAccent"
        android:visibility="gone"
        android:elevation="24dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/recordStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/recording_popup_ellipsis" />

            <TextView
                android:id="@+id/orientationStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recordStatus"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/recording_popup_unoriented" />

            <Button
                android:id="@+id/recordingSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/orientationStatus"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="?android:attr/borderlessButtonStyle"
                android:enabled="false"
                android:textColor="@color/recording_popup_button_color"
                android:onClick="stopRecordSaveClick"
                android:text="@string/recording_popup_save" />

            <Button
                android:id="@+id/recordingDiscard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/recordingSave"
                app:layout_constraintBottom_toBottomOf="parent"
                style="?android:attr/borderlessButtonStyle"
                android:enabled="false"
                android:textColor="@color/recording_popup_button_color"
                android:onClick="stopRecordDiscardClick"
                android:text="@string/recording_popup_discard" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
